feat: add vscode settings for omnisharp Mentions: #1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,10 @@
     "ProjectSettings/": true,
     "temp/": true,
     "Temp/": true
-  }
+  },
+  "[csharp]": {
+    "editor.defaultFormatter": "ms-dotnettools.csharp"
+  },
+  "omnisharp.useEditorFormattingSettings": false,
+  "omnisharp.enableEditorConfigSupport": false
 }
